
        * Add elm_naviframe_item_pop_cb_set().
        * Naviframe works for H/W backkey event.

2013-03-08  WooHyun Jung

        * Add elm_widget_newest_focus_order_get for knowing the last object(and its focus order) which got focus.
        * After elm_win is created, if there is no manual focus setting, only elm_win should get focus when focus state is changed.

2013-03-08  Jaehwan Kim

        * Fix the toolbar cannot be unselected when it's mode is ELM_OBJECT_SELECT_MODE_ALWAYS.

2013-03-08  ChunEon Park (Hermet)

        * Remove the back button callback if the button is unset on the naviframe.

2013-03-11  WooHyun Jung

        * Fixed a bug that naviframe's focus_next didn't work after changing evenry item to elm_layout.
        * Naviframe is now supproting focus_direction.

2013-03-11  Tom Hacohen (TAsn)

        * Entry: Fixed a bug with text appending.

2013-03-13  WooHyun Jung

        * Fixed a bug in elm_list. Focus_next is needed only when access mode is enabled.

2013-03-13  Tae-Hwan Kim (bluezery)

        * Fix a memory leak in elm_genlist. Return value of elm_genlist_realized_items_get should be freed

2013-03-15  Jaehwan Kim

        * Add the smart signals in scroller. "scroll,left", "scroll,right", "scroll,up", "scroll,down".

2013-03-18  WooHyun Jung

        * Focus highlight should be reconfigured when theme is changed.

2013-03-19  Jaehwan Kim

        * Fix the elm_shutdown bug in _elm_shutdown_config.
        When the elm_shutdown is used after elm_config_all_flush, the segment fault occur.
        It's why it uses ecore_x in _prop_all_update_cb after removing it.

2013-03-20 Carsten Haitzler (The Rasterman)

        * Fix elm box layout when an item has a max size, and that squashes all
        content even when the minimum size is greater.

2013-03-23 WooHyun Jung

        * Add four more focus directions. ELM_FOCUS_UP/DOWN/RIGHT/LEFT.
        * Add elm_object_focus_next_object_get/set.
        * Add elm_object_focused_object_get.